<resources>
    <string name="app_name">Smart BabyCradle</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Smart BabyCradle</string>
    <string name="nav_header_subtitle">contact@babycradle.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Already have an account? Login</string>
    <string name="click_to_register">Don\'t have an account? Register</string>
    <string name="logout">Logout</string>
    <string name="nom">Last Name</string>
    <string name="prenom">First Name</string>
    <string name="tel">Phone Number</string>
    <string name="list_tasks">List Activities</string>
    <string name="menu">Menu</string>
    <string name="option_1">Option 1</string>
    <string name="add_new_task">Add an Activity</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment home</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date_de_debut">Start Date</string>
    <string name="date_de_fin">End Date</string>
    <string name="save">Save</string>
    <string name="titre_item">Title:</string>
    <string name="date_item">Date:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload">Upload</string>
    <string name="update_task">Edit Activity</string>
    <string name="update">Update</string>
    <string name="search">Search</string>
    <string name="icon_add_new_event">Add new event icon</string>
    <string name="events">Events</string>
    <string name="add_event">Add an Event</string>
    <string name="category">Category</string>
    <string name="lieu">Location</string>
    <string name="item_date">3/15/2024-4/15/2024</string>
    <string name="en_cours">In Progress</string>
    <string name="update_event">Edit Event</string>
    <string name="start_with">Choose a Time</string>
    <string name="heur">00:00 AM</string>
    <string name="select_a_day">Choose a Day</string>
    <string name="item_card_date">09.04.2024</string>
    <string name="ismail_telhouni">DOUNYA</string>
    <string name="ismailtelhouni123_gmail_com">gourjadounya@gmail.com</string>
    <string name="informaiton">About us</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Update your Password</string>
    <string name="about_our_app">About Our App</string>
    <string name="data">This is a brief description of our application. You can provide information about its purpose, features, etc.</string>
    <string name="item_change_password">Update your Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forget_your_password">Forget password?</string>
    <string name="welcome">Welcome to Smart BabyCradle!</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_us_info">If you have any questions or suggestions, feel free to reach out to us at support@babycradle.com</string>
    <string name="share">Share Smart BabyCradle with your friends and help them keep their babies safe and comfortable!</string>
    <string name="about_our_application">About Our Application</string>
    <string name="description_text">Smart BabyCradle is an application designed to help parents monitor and manage their baby\'s cradle. With Smart BabyCradle, you can easily create, edit, and delete activities and events related to your baby\'s care, ensuring that your baby stays safe and comfortable. Whether you need to track feeding times, nap schedules, or other important events, Smart BabyCradle has you covered.</string>
    <string name="motivation_text">Stay attentive and keep your baby safe and happy!</string>
</resources>
